week12/deploy/httpserver-ns.yaml
apiVersion: v1
kind: Namespace
metadata: 
 name: httpserver
 labels: 
  name: httpserver
