week12/deploy/httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-svc
  namespace: httpserver
  labels:
    app: httpserver
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
spec:
  selector:
    app: httpserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
