week12/deploy/istio-gw-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpserver.haylin.test
      port:
        name: http-default
        number: 80
        protocol: HTTP
