week12/deploy/istio-vs-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  gateways:
    - httpserver
  hosts:
    - httpserver.haylin.test
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: httpserver-svc.httpserver.svc.cluster.local
            port:
              number: 80
