week12/deploy/istio-vs-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - httpsserver.haylin.test
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver-svc.httpserver.svc.cluster.local
            port:
              number: 80
